Remove overflow: hidden from landing page section and decrease margin from #soothe line (causing issues on smartphone landscape view)

--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
     color: #003C2D;
 }
 #landing-page {
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 }
 header {
     display: flex;
@@ -86,7 +86,6 @@ main {
     background-size: cover;
     background-position: center;
     margin: auto;
-    overflow: hidden;
     text-align: center;
 }
 main #spotlight {
@@ -106,7 +105,7 @@ main .logo {
     font-weight: bold;
 }
 main #soothe {
-    margin-top: 70px;
+    margin-top: 50px;
     font-size: 50px;
     color: #003C2D;
     text-align: center;
